--- a/src/App.css
+++ b/src/App.css
@@ -1,144 +1,37 @@
-
-.header{
-    background-color: orange;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 100px;
-    width: 100%;
-    overflow: hidden;
+.login{
+  width: 60%;
+  align-content: center;
 }
-
-
-
-
-html { width: 100%; height:100%; overflow:hidden; }
-
-body { 
-    width: 100%;
-    height:100%;
-    font-family: 'Open Sans', sans-serif;
-    background:white;
-   
-   
-}
-main {
-    flex: 1 0 auto;
-    
-  }
-
 
 .footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 10%;
-  width: 100%;
-  padding: 1rem;
-  background-color:#ee6e73;
-  text-align: center;
-  }
-  .login {
-    align-content: center;
-    margin: 10%;
-    width: 40%;
-    border-style: solid;
-    background-color: lightgoldenrodyellow;
-    margin-left: 28%;
-    border-width: 1px;
-    border-radius: 18px;
-  }
-
-  /* Slideshow container */
-.slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-  }
-  
-  /* Next & previous buttons */
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-  
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
+    position: fixed;
+    height: 60px;
+    bottom: 0;
     width: 100%;
-    text-align: center;
-  }
+    background-color:#343a40!important;
+    color: white;
+    font-size: 17px;
+}
+.header{
+  position: relative;
+    height: 60px;
+    width: 100%;
   
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @-webkit-keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    .prev, .next,.text {font-size: 11px}
-  }
+    font-size: 23px;
+}
+.home{
+  margin-top: 3%;
+ 
+}
+.bgcolor{
+  background-color: #9e937e;
+}
+.cardSize{
+  width:50px;
+  height: 100px;
+}
+.cardImage{
+  width:"90px";
+  height:"270px";
+}
+
